test/Fail/UnsafePrimEraseEquality.err
UnsafePrimEraseEquality.agda:6.3-69: error: [SafeFlagWithoutKFlagPrimEraseEquality]
Cannot use primEraseEquality with safe and without-K flags.
when checking that the type of the primitive function
primEraseEquality is ∀ {@0 a} {A : Set a} {x y : A} → x ≡ y → x ≡ y
